[tool.poetry]
name = "pydux"
version = "0.1.0"
description = "Redux like store for python application"
authors = ["Karan Gupta <gkaran184@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
